--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@use 'utilities/variables';
-@use 'utilities/mixins';
+@use 'utilities/variables' as *;
+@use 'utilities/mixins' as *;
 
 @use 'vendors/normalize';
 
